@@ -22,8 +22,9 @@
 
 #include "modifier/dpad_rotation_modifier.hpp"
 #include "modifier/four_way_restrictor_modifier.hpp"
-#include "modifier/square_axis_modifier.hpp"
 #include "modifier/rotate_axis_modifier.hpp"
+#include "modifier/square_axis_modifier.hpp"
+#include "modifier/statistic_modifier.hpp"
 
 Modifier*
 Modifier::from_string(const std::string& name, const std::string& value)
@@ -60,6 +61,10 @@ Modifier::from_string(const std::string& name, const std::string& value)
     else if (name == "rotate")
     {
       return RotateAxisModifier::from_string(args);
+    }
+    else if (name == "stat" || name == "statistic")
+    {
+      return StatisticModifier::from_string(args);
     }
     else
     {
