@@ -1,3 +1,9 @@
+xboxdrv 0.7.2 - (??/Feb/2011)
+=============================
+
+* added statistic modifier that counts how often buttons are pressed
+
+
 xboxdrv 0.7.1 - (30/Jan/2011)
 =============================
 
